# freally-file-manager

./: .gitignore  COMPETITOR-TEST.md  Cargo.toml  EULA.md  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
apps/copythat-mobile/: package.json
apps/copythat-ui/: index.html  package.json  pnpm-lock.yaml
apps/freally-mobile/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/freally-ui/: dropstack.html  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  (+3 more)
crates/copythat-audit/: Cargo.toml
crates/copythat-audit/src/: format.rs  layer.rs  lib.rs  verify.rs  worm.rs
crates/copythat-chunk/: Cargo.toml
crates/copythat-chunk/src/: cdr.rs  error.rs  lib.rs  manifest.rs  repository.rs  sink.rs  store.rs
crates/copythat-chunk/src/migrate/: borg.rs  kopia.rs  mod.rs  restic.rs
crates/copythat-cli/: Cargo.toml  build.rs
crates/copythat-cli/src/: cli.rs  lib.rs  output.rs  runtime.rs  schedule.rs  volume_watch.rs
crates/copythat-cli/src/commands/: audit.rs  copy.rs  migrate.rs  mod.rs  provenance.rs  schedule.rs  serve.rs
crates/copythat-cloud/: Cargo.toml
crates/copythat-cloud/src/: backend.rs  credentials.rs  error.rs  lib.rs  oauth.rs  oauth_pkce.rs  offload.rs  registry.rs  sftp.rs  sink.rs  target.rs  transfer.rs  verify.rs
crates/copythat-core/: Cargo.toml
crates/copythat-core/benches/: copy_bench.rs
crates/copythat-core/src/: collision.rs  control.rs  engine.rs  error.rs  event.rs  filter.rs  lib.rs  meta.rs  options.rs  provenance.rs  queue.rs  safety.rs  sparse.rs  translate.rs  tree.rs  versioning.rs
crates/copythat-core/src/scan/: control.rs  cursor.rs  event.rs  index.rs  mod.rs  schema.rs  types.rs
crates/copythat-core/tests/: queue_registry.rs  tree_basic.rs  tree_collisions.rs
crates/copythat-crypt/: Cargo.toml
crates/copythat-crypt/src/: compress.rs  decrypt.rs  encrypt.rs  error.rs  lib.rs  policy.rs  sink.rs
crates/copythat-diag/: Cargo.toml
crates/copythat-diag/src/: lib.rs  sampler.rs
crates/copythat-hash/: Cargo.toml
crates/copythat-hash/src/: algorithm.rs  sidecar.rs
crates/copythat-helper/: Cargo.toml  build.rs
crates/copythat-helper/src/: handler.rs  lib.rs  rpc.rs  spawn.rs  transport.rs
crates/copythat-history/: Cargo.toml
crates/copythat-history/src/: error.rs  export.rs  handle.rs  lib.rs  migrations.rs  types.rs
crates/copythat-i18n/: Cargo.toml
crates/copythat-i18n/src/: lib.rs
crates/copythat-journal/: Cargo.toml
crates/copythat-journal/src/: error.rs  journal.rs  lib.rs  schema.rs  sink.rs  types.rs
crates/copythat-mobile/: Cargo.toml
crates/copythat-mobile/src/: lib.rs  notify.rs  pairing.rs  server.rs  settings.rs
crates/copythat-mount/: Cargo.toml
crates/copythat-mount/src/: backends.rs  error.rs  fuse_backend.rs  fuse_filesystem.rs  handle.rs  lib.rs  platform.rs  tree.rs  winfsp_backend.rs
crates/copythat-perceptual/: Cargo.toml
crates/copythat-perceptual/src/: lib.rs
crates/copythat-platform/: Cargo.toml
crates/copythat-platform/src/: attrs.rs  compio_overlapped.rs  dedup.rs  disk.rs  dispatcher.rs  hardlink_set.rs  helpers.rs  lib.rs  meta.rs  os.rs  outcome.rs  presence.rs  reflink_path.rs  sparse.rs  topology.rs  volume.rs  wake_lock.rs
crates/copythat-platform/src/native/: fallback.rs  linux.rs  macos.rs  mod.rs  parallel.rs  windows.rs  windows_overlapped.rs
crates/copythat-plugin/: Cargo.toml
crates/copythat-plugin/src/: error.rs  handle.rs  hook.rs  host.rs  lib.rs  manifest.rs
crates/copythat-plugin/tests/: sample_plugins.rs  scaffold.rs  wasm_runtime.rs
crates/copythat-power/: Cargo.toml
crates/copythat-power/src/: bus.rs  event.rs  lib.rs  policy.rs  source.rs
crates/copythat-provenance/: Cargo.toml
crates/copythat-provenance/src/: encoder.rs  error.rs  lib.rs  manifest.rs  sign.rs  sink.rs  timestamp.rs  verify.rs
crates/copythat-recovery/: Cargo.toml
crates/copythat-recovery/src/: auth.rs  error.rs  handlers.rs  lib.rs  server.rs
crates/copythat-recovery/templates/: base.html  error.html  job_detail.html  jobs.html  landing.html  restore.html
crates/copythat-secure-delete/: Cargo.toml
crates/copythat-secure-delete/src/: engine.rs  event.rs  lib.rs  linux_helper.rs  macos_helper.rs  sanitize.rs  ssd.rs  windows_helper.rs
crates/copythat-server/: Cargo.toml
crates/copythat-server/src/: lib.rs  s3.rs  sftp.rs
crates/copythat-settings/: Cargo.toml
crates/copythat-settings/src/: conflict_profile.rs  defaults.rs  error.rs  lib.rs  profiles.rs
crates/copythat-shape/: Cargo.toml
crates/copythat-shape/src/: error.rs  lib.rs  schedule.rs  sink.rs
crates/copythat-shellext/: Cargo.toml
crates/copythat-shellext/src/: com.rs  consts.rs  lib.rs  registry.rs
crates/copythat-snapshot/: Cargo.toml
crates/copythat-snapshot/src/: hook.rs  kind.rs  lib.rs  rpc.rs
crates/copythat-snapshot/src/backends/: apfs.rs  btrfs.rs  mod.rs  vss.rs  vss_com.rs  win_pipe_security.rs  zfs.rs
crates/copythat-sync/: Cargo.toml
crates/copythat-sync/src/: engine.rs  error.rs  lib.rs  walker.rs
crates/copythat-watch/: Cargo.toml
crates/copythat-watch/src/: debounce.rs  event.rs  lib.rs  watcher.rs
docs/: BENCHMARKS.md  BENCHMARKS_PHASE_42.md  MANUAL-UAC-TEST.md  documentation.html  documents.html  index.html  search-index.js
packaging/: README.md
scripts/: add_busy_labels.sh  add_clear_history_keys.sh  add_collision_policy_keys.sh  add_i18n_keys.sh  add_phase42_keys.sh  add_preflight_keys.sh  add_rerun_hint.sh  add_sort_keys.sh  add_sort_lock_key.sh  add_sort_simple_keys.sh  add_subset_keys.sh  bench-merge.ps1  bench-phase42.ps1  bench-render.ps1  build-updater-manifest.sh  ci-local.mjs  find_wer_dump.ps1  phase23_insert_sparse_keys.py  phase24_insert_meta_keys.py  phase25_insert_sync_keys.py  phase26_insert_watch_keys.py  phase27_insert_chunk_keys.py  phase28_insert_dropstack_keys.py  tail_crash_log.ps1
supply-chain/: audits.toml  config.toml
tests/: lock_file.ps1  vss_com_smoke.ps1
xtask/: Cargo.toml
xtask/src/: bench.rs  conformance.rs  main.rs  plugins.rs  qa.rs  release.rs
(+790 files in other folders)
