[workspace]
resolver = "2"
members = [
    "crates/copythat-core",
    "crates/copythat-hash",
    "crates/copythat-secure-delete",
    "crates/copythat-history",
    "crates/copythat-platform",
    "crates/copythat-shellext",
    "crates/copythat-i18n",
    "crates/copythat-settings",
    "crates/copythat-snapshot",
    "crates/copythat-journal",
    "crates/copythat-shape",
    "crates/copythat-sync",
    "crates/copythat-watch",
    "crates/copythat-chunk",
    "crates/copythat-power",
    "crates/copythat-cloud",
    "crates/copythat-mount",
    "xtask",
    "apps/copythat-ui/src-tauri",
]

[workspace.package]
version = "1.25.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-AllRightsReserved"
authors = ["Copy That Contributors"]
repository = "https://github.com/MikesRuthless12/CopyThat2026"
homepage = "https://github.com/MikesRuthless12/CopyThat2026"
readme = "README.md"
# Proprietary, source-visible: workspace crates are not for crates.io.
# Combined with `[licenses] private.ignore = true` in deny.toml so the
# license gate skips our own All-Rights-Reserved crates and only checks
# third-party dependencies.
publish = false

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
