[workspace]
resolver = "2"
members = [
    "crates/copythat-core",
    "crates/copythat-hash",
    "crates/copythat-secure-delete",
    "crates/copythat-history",
    "crates/copythat-platform",
    "crates/copythat-shellext",
    "crates/copythat-i18n",
    "crates/copythat-settings",
    "crates/copythat-snapshot",
    "crates/copythat-journal",
    "crates/copythat-shape",
    "crates/copythat-sync",
    "crates/copythat-watch",
    "crates/copythat-chunk",
    "crates/copythat-power",
    "crates/copythat-cloud",
    "crates/copythat-mount",
    "crates/copythat-audit",
    "crates/copythat-crypt",
    "crates/copythat-cli",
    "crates/copythat-helper",
    "crates/copythat-mobile",
    "xtask",
    "apps/copythat-ui/src-tauri",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-AllRightsReserved"
authors = ["Copy That Contributors"]
repository = "https://github.com/MikesRuthless12/CopyThat2026"
homepage = "https://github.com/MikesRuthless12/CopyThat2026"
readme = "README.md"
# Proprietary, source-visible: workspace crates are not for crates.io.
# Combined with `[licenses] private.ignore = true` in deny.toml so the
# license gate skips our own All-Rights-Reserved crates and only checks
# third-party dependencies.
publish = false

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
# Phase 17g — binary hardening. `lto = "fat"` lets the optimizer drop
# more dead control-flow paths than the default thin LTO, shrinking the
# attack surface (fewer unreachable gadgets); `codegen-units = 1` is the
# matching tradeoff (slower link, smaller + more inline-able binary).
# `panic = "abort"` keeps `_Unwind_*` frames out of release builds, so a
# panic from inside an unsafe block cannot be caught and resumed.
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
# Linux RELRO/NOW (`-Wl,-z,relro -Wl,-z,now`), Windows /guard:cf, and
# macOS PAC+BTI flags live in the per-target build.rs scripts in the
# crates that ship binaries (apps/copythat-ui/src-tauri,
# crates/copythat-cli) so the workspace profile stays portable.

[profile.dev]
opt-level = 0
debug = true
