[workspace]
resolver = "2"
members = [
    "crates/freally-core",
    "crates/freally-hash",
    "crates/freally-secure-delete",
    "crates/freally-history",
    "crates/freally-platform",
    "crates/freally-shellext",
    "crates/freally-i18n",
    "crates/freally-settings",
    "crates/freally-snapshot",
    "crates/freally-journal",
    "crates/freally-shape",
    "crates/freally-sync",
    "crates/freally-watch",
    "crates/freally-chunk",
    "crates/freally-power",
    "crates/freally-cloud",
    "crates/freally-mount",
    "crates/freally-audit",
    "crates/freally-crypt",
    "crates/freally-cli",
    "crates/freally-helper",
    "crates/freally-mobile",
    "crates/freally-recovery",
    "crates/freally-perceptual",
    "crates/freally-provenance",
    "crates/freally-plugin",
    "crates/freally-diag",
    "crates/freally-server",
    "xtask",
    "apps/freally-ui/src-tauri",
]

[workspace.package]
version = "0.20.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-AllRightsReserved"
authors = ["Freally File Manager Contributors"]
repository = "https://github.com/MikesRuthless12/freally-file-manager"
homepage = "https://github.com/MikesRuthless12/freally-file-manager"
readme = "README.md"
# Proprietary, source-visible: workspace crates are not for crates.io.
# Combined with `[licenses] private.ignore = true` in deny.toml so the
# license gate skips our own All-Rights-Reserved crates and only checks
# third-party dependencies.
publish = false

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
# Phase 17g — binary hardening. `lto = "fat"` lets the optimizer drop
# more dead control-flow paths than the default thin LTO, shrinking the
# attack surface (fewer unreachable gadgets); `codegen-units = 1` is the
# matching tradeoff (slower link, smaller + more inline-able binary).
# `panic = "abort"` keeps `_Unwind_*` frames out of release builds, so a
# panic from inside an unsafe block cannot be caught and resumed.
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
# Linux RELRO/NOW (`-Wl,-z,relro -Wl,-z,now`), Windows /guard:cf, and
# macOS PAC+BTI flags live in the per-target build.rs scripts in the
# crates that ship binaries (apps/freally-ui/src-tauri,
# crates/freally-cli) so the workspace profile stays portable.

[profile.dev]
opt-level = 0
debug = true
