[package]
name = "xtask"
description = "Build / release / lint helper CLI for Freally File Manager v1.0.0."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# `xtask bench-vs` writes its synthetic workload into a tempdir +
# times our engine head-to-head against competitor copy tools, so
# it needs the engine itself plus a tokio runtime to drive it.
# `freally-platform` adds the OS-native fast-path hook
# (CopyFileExW / copyfile / copy_file_range) which is what the
# shipped Tauri app uses — without it we're racing a pure-async
# byte loop against a kernel-tuned CopyFileEx.
freally-core = { path = "../crates/freally-core", version = "0.19" }
freally-platform = { path = "../crates/freally-platform", version = "0.19" }
# `xtask bench-vs --secure-cleanup` uses our own secure-delete crate
# to wipe the bench destination files after a run, exercising the
# same shredder the UI drives.
freally-secure-delete = { path = "../crates/freally-secure-delete", version = "0.19" }
# `xtask gen-conformance` builds the CDR-0 conformance corpus straight from
# the reference `CdrManifest`, so the fixtures always match the impl.
freally-chunk = { path = "../crates/freally-chunk", version = "0.19" }
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
