[package]
name = "copythat-chunk"
description = "Content-defined chunk store (FastCDC + BLAKE3 + redb index + pack files) for delta-resume and same-job dedup. Foundation for the Copy That v1.0.0 Phase 49–51 moonshots."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Phase 27 implements `copythat_core::options::ChunkStoreSink`.
copythat-core = { path = "../copythat-core", version = "1" }
# Full-file + chunk hashes share one algorithm. BLAKE3 is already in
# the tree via Phase 3 (copythat-hash) and Phase 20 (journal).
blake3 = "1"
# FastCDC paper implementation, pure Rust. MIT. Deny.toml allowlist
# patched in this phase.
fastcdc = "3"
# Matches Phase 20's choice — single-file embedded ACID KV store. The
# chunk index and manifest table both live in one redb file.
redb = "2"
# User-data dir resolution (matches Phase 9 / 20 conventions so the
# chunk store lands alongside `history.db` + `copythat-journal.redb`).
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
# Pack-id generation. `uuid` is already workspace-direct from Phase 25.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rand = "0.9"
tempfile = "3"

# Phase 27 smoke test lives at the workspace root alongside every
# other phase's smoke.
[[test]]
name = "phase_27_chunk"
path = "../../tests/smoke/phase_27_chunk.rs"
