[package]
name = "copythat-chunk"
description = "Content-defined chunk store (FastCDC + BLAKE3 + redb index + pack files) for delta-resume and same-job dedup. Foundation for the Copy That v1.0.0 Phase 49–51 moonshots."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Phase 27 implements `copythat_core::options::ChunkStoreSink`.
copythat-core = { path = "../copythat-core", version = "0.19" }
# Full-file + chunk hashes share one algorithm. BLAKE3 is already in
# the tree via Phase 3 (copythat-hash) and Phase 20 (journal).
blake3 = "1"
# FastCDC paper implementation, pure Rust. MIT. Deny.toml allowlist
# patched in this phase.
fastcdc = "3"
# Matches Phase 20's choice — single-file embedded ACID KV store. The
# chunk index and manifest table both live in one redb file.
redb = "2"
# User-data dir resolution (matches Phase 9 / 20 conventions so the
# chunk store lands alongside `history.db` + `copythat-journal.redb`).
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Phase 50 (CDR-0) — canonical CBOR for the cross-tool portability
# format. Both crates are already in the workspace tree + deny.toml
# allowlist via Phase 43 (`copythat-provenance`), so this adds no new
# third-party crate. `serde_bytes` makes 32-byte digests encode as CBOR
# byte strings instead of arrays of integers.
ciborium = "0.2"
serde_bytes = "0.11"
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
# Pack-id generation. `uuid` is already workspace-direct from Phase 25.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rand = "0.9"
tempfile = "3"

# Phase 27 smoke test lives at the workspace root alongside every
# other phase's smoke.
[[test]]
name = "phase_27_chunk"
path = "../../tests/smoke/phase_27_chunk.rs"

# Phase 49 smoke — the unified Repository (snapshots + refcount GC).
[[test]]
name = "phase_49_repo"
path = "../../tests/smoke/phase_49_repo.rs"

# Phase 50 smoke — CDR-0 manifest portability (canonical CBOR round-trip
# + validation + spec-version refusal).
[[test]]
name = "phase_50_portability"
path = "../../tests/smoke/phase_50_portability.rs"
