[package]
name = "copythat-chunk"
description = "Content-defined chunk store (FastCDC + BLAKE3 + redb index + pack files) for delta-resume and same-job dedup. Foundation for the Copy That v1.0.0 Phase 49–51 moonshots."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Phase 27 implements `copythat_core::options::ChunkStoreSink`.
copythat-core = { path = "../copythat-core", version = "0.19" }
# Full-file + chunk hashes share one algorithm. BLAKE3 is already in
# the tree via Phase 3 (copythat-hash) and Phase 20 (journal).
blake3 = "1"
# FastCDC paper implementation, pure Rust. MIT. Deny.toml allowlist
# patched in this phase.
fastcdc = "3"
# Matches Phase 20's choice — single-file embedded ACID KV store. The
# chunk index and manifest table both live in one redb file.
redb = "2"
# User-data dir resolution (matches Phase 9 / 20 conventions so the
# chunk store lands alongside `history.db` + `copythat-journal.redb`).
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Phase 50 (CDR-0) — canonical CBOR for the cross-tool portability
# format. Both crates are already in the workspace tree + deny.toml
# allowlist via Phase 43 (`copythat-provenance`), so this adds no new
# third-party crate. `serde_bytes` makes 32-byte digests encode as CBOR
# byte strings instead of arrays of integers.
ciborium = "0.2"
serde_bytes = "0.11"
# Phase 50 importers (user-authorized relaxation of the "no new crates"
# rule). Every crate below is ALREADY resolved in the workspace lockfile
# via `age` / dalek, so these only declare existing in-tree crates as
# direct deps — no deny.toml change and no new compilation. Used by the
# restic importer: scrypt KDF + AES-256-CTR + Poly1305-AES + base64 +
# zstd (restic repo-format v2 compression).
aes = "0.8"
base64 = "0.21"
cipher = "0.4"
ctr = "0.9"
poly1305 = "0.8"
scrypt = "0.11"
sha2 = "0.10"
zstd = "0.13"
# Borg importer (in-tree): HMAC-SHA256 (key unwrap MAC + chunk MAC; the
# PBKDF2 outer loop is hand-rolled — borg's 32-byte key is one HMAC
# block) + zlib (flate2). MessagePack + LZ4-block are also hand-rolled in
# migrate/borg.rs, so Borg adds NO genuinely-new crate.
flate2 = "1"
hmac = "0.12"
# Kopia importer (in-tree): AES-256-GCM (format blob + content), BLAKE2b
# keyed content IDs, HKDF content-key derivation. The v2 index binary
# format is hand-rolled in migrate/kopia.rs — no genuinely-new crate.
aes-gcm = "0.10"
blake2 = "0.10"
hkdf = "0.12"
# RFC 3339 snapshot timestamps from restic / kopia metadata. In-tree
# via history / sync / audit; parsing only (no clock feature).
chrono = { version = "0.4", default-features = false, features = ["std"] }
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
# Pack-id generation. `uuid` is already workspace-direct from Phase 25.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rand = "0.9"
tempfile = "3"

# Phase 27 smoke test lives at the workspace root alongside every
# other phase's smoke.
[[test]]
name = "phase_27_chunk"
path = "../../tests/smoke/phase_27_chunk.rs"

# Phase 49 smoke — the unified Repository (snapshots + refcount GC).
[[test]]
name = "phase_49_repo"
path = "../../tests/smoke/phase_49_repo.rs"

# Phase 50 smoke — CDR-0 manifest portability (canonical CBOR round-trip
# + validation + spec-version refusal).
[[test]]
name = "phase_50_portability"
path = "../../tests/smoke/phase_50_portability.rs"

# Phase 50 smoke — restic importer against a committed restic v2 fixture
# (decrypt + parse + re-ingest; byte-identical restore). No restic binary.
[[test]]
name = "phase_50b_restic"
path = "../../tests/smoke/phase_50b_restic.rs"

# Phase 50 smoke — Borg importer against a committed repokey fixture
# (PBKDF2 + AES-CTR + HMAC + msgpack/LZ4; byte-identical restore). No borg.
[[test]]
name = "phase_50c_borg"
path = "../../tests/smoke/phase_50c_borg.rs"

# Phase 50 smoke — Kopia importer against a committed filesystem fixture
# (format scrypt/AES-GCM + v2 index + HMAC-keyed content GCM + objects).
[[test]]
name = "phase_50d_kopia"
path = "../../tests/smoke/phase_50d_kopia.rs"
