[package]
name = "copythat-cloud"
description = "Phase 32 — cloud backend matrix for Copy That. Wraps OpenDAL with a typed Backend / BackendKind / CopyTarget surface and OS-keychain credential storage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# OpenDAL is the cross-backend storage layer. Phase 32b lights the
# remaining 8 drivers: `services-azblob` (Azure Blob), `services-gcs`
# (Google Cloud Storage), `services-onedrive`, `services-gdrive`
# (Google Drive), `services-dropbox`, `services-webdav`,
# `services-sftp`, `services-ftp`. `services-fs` covers LocalFs;
# `services-s3` covers Amazon S3 + Cloudflare R2 + Backblaze B2 + any
# S3-compatible endpoint via the same driver. Features are listed
# explicitly rather than via a catch-all `--all-features` so
# `cargo deny` audits a bounded, reviewable set.
opendal = { version = "0.54", default-features = false, features = [
    "services-fs",
    "services-s3",
    "services-azblob",
    "services-gcs",
    "services-onedrive",
    "services-gdrive",
    "services-dropbox",
    "services-webdav",
    # `services-sftp` pulls `openssh` 0.11 which fails to build on
    # Windows (conflicting `TryFrom<tokio::process::Child*>` impls
    # introduced by Rust's blanket-From; tracked upstream). Kept in
    # BackendKind + config + settings persistence; `make_operator`
    # surfaces `BackendError::BackendNotEnabled` until the upstream
    # fix lands or we swap to a pure-Rust SSH implementation
    # (`russh`). Re-enable here when that resolves.
    # "services-sftp",
    "services-ftp",
] }

# OS keychain. Apple Keychain on macOS, Windows Credential Manager on
# Windows, Secret Service / kwallet on Linux. MIT/Apache-2.0.
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "linux-native",
    "sync-secret-service",
] }

serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "io-util"] }
futures = "0.3"
bytes = "1"
async-trait = "0.1"
# Phase 32b — CloudSink adapter against copythat-core's trait bound.
copythat-core = { path = "../copythat-core", version = "1" }

# Phase 32f — SFTP via russh + russh-sftp. Pure-Rust MIT-licensed
# replacement for OpenDAL's `services-sftp` (which pulls the
# openssh 0.11 crate that fails to build on Windows). Wired as a
# custom `CopyTarget` impl in `src/sftp.rs` rather than through
# OpenDAL, so it stays independent of OpenDAL's backend matrix.
russh = { version = "0.60", default-features = false, features = [
    "flate2",
    "aws-lc-rs",
] }
russh-sftp = "2"
# Phase 32f — BLAKE3 for verify-on-remote client-side hashing.
blake3 = "1"
# Phase 32g — SHA-256 for verify backends that expose a SHA-256
# server-side checksum (GCS default object hash; Azure Blob with
# MD5 disabled). MIT/Apache-2.0.
sha2 = "0.10"
# Phase 32h — MD5 for the S3/Azure ETag server-side-checksum
# fast-path. Not a security primitive here — we're matching what
# the backend reports, not attesting integrity. MIT/Apache-2.0.
md-5 = "0.10"
# Phase 32g — hex encoding for the stat-metadata ETag fast-path
# comparator (OpenDAL stores etag/content-md5 as ASCII hex).
hex = "0.4"
# Phase 32h — base64 decode for Azure Blob's `content-md5` which
# is base64-encoded rather than hex. MIT/Apache-2.0.
base64 = "0.22"
# Phase 32i — HMAC-SHA1 for hashed OpenSSH known_hosts entries
# (|1|salt|hmac format). MIT/Apache-2.0.
hmac = "0.12"
sha1 = "0.10"
# Phase 32i — Dropbox PKCE browser-redirect flow listens on a
# local loopback port for the auth-code redirect. Raw TcpListener
# from std::net; no extra crate needed. `getrandom` supplies the
# PKCE code_verifier's cryptographic bytes (simpler than pulling
# full `rand`; OpenDAL already brings getrandom transitively).
getrandom = "0.3"
# Phase 32f — reqwest for OAuth device-code HTTP flows. Uses
# rustls so we don't pull OpenSSL into the dep tree.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_json = "1"
# Phase 32f OAuth — `webbrowser` opens the user_code verification
# URL in the user's default browser (cross-platform). MIT.
webbrowser = "1"
# Phase 32f OAuth — `url` for RFC-3986 parsing of token endpoints.
url = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "io-util",
    "test-util",
] }
toml = "0.8"
copythat-settings = { path = "../copythat-settings" }
# Phase 32d — smoke exercises the `copy_file` engine-level cloud-sink
# branch end-to-end. Dev-only so the release graph stays independent
# of copythat-core.
copythat-core = { path = "../copythat-core" }

[[test]]
name = "phase_32_cloud"
path = "../../tests/smoke/phase_32_cloud.rs"

[[test]]
name = "phase_32f_minio"
path = "../../tests/smoke/phase_32f_minio.rs"
